# op-cc-rm

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.cu
matlab/: op_kernel_cc_4n_rm.m  test.m
py/: op_kernel_cc_4n_rm.py
src/: cc.cuh  cc.h
